# sql_agent_mcp_lg

./: LICENSE  README.md  chainlit_ui.py  pyproject.toml
mcp_intro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scout/: client.py  graph.py  streamlit_ui.py  test.py
scout/my_mcp/: mcp_config.json
scout/my_mcp/local_servers/: data.csv  dataflow.py  sgl_plugin.py
